2014-01-17  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/tri_squeeze.m: (0.2.0)

	- Add output argument with the mapping between the original list
	of vertices and the squeezed list of vertices.

2013-12-19  Ramon Casero  <rcasero@gmail.com>

	* CMakeLists.txt: (0.8.2)

	- Fix bug. Now the Windows build requires library
	boost-serialization. This has to be set at configuration time of
	boost as an external project.

	* matlab/CgalToolbox/CMakeLists.txt: (0.2.20)

	- Fix bug. The last change (0.2.19) was unnecessary. We don't need
	to tell cmake explicitely to link against boost serialization. It
	suffices that boost-serialization is built from the root
	CMakeLists.txt of gerardus.

	* matlab/ManifoldToolbox/vertex_untangle.m: (0.2.3)

	- Small edit help header.

2013-12-16  Ramon Casero  <rcasero@gmail.com>

	* At this point, Gerardus builds under Windows 64 bit.

	* matlab/MatlabImportFilter.hxx: (0.8.1)

	- Fix bug. Windows gives a compilation error for mxINT64_CLASS in
	Cgal. It's too complicated trying to fix that. Instead, we just
	disable that type as a valid input type. It's not likely that it
	will be used anyway.

	* matlab/MatlabExportFilter.hxx: (0.6.1)

	- Fix bug. Windows doesn't accept the declaration of an array
	variable with length 0, e.g. dims[0].  It doesn't allow either to
	declare an array with a variable length, so we have to use the
	mwSize *dims = new mwSize[ndims] for that.

	* CMakeLists.txt: (0.8.1)
	* matlab/CgalToolbox/CMakeLists.txt: (0.2.19)

	- Fix bug. On Windows, cgal_check_self_intersect needs to be
	linked to the boost serialize library.

	* CMakeLists.txt: (0.8.0)

	- Add linux build of library IPOPT, a dependency of OptiToolbox.

	- This also requires that gfortran and gfortran-4.4 have been
	installed in the linux system.

2013-12-15  Ramon Casero  <rcasero@gmail.com>

	* Add cpp/src/third-party/Ipopt-3.11.6:

	- Ipopt is an open-source solver for large-scale nonlinear